<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="4dp"

        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/product_card"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/product_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".view.fragment.test.UserInfoActivity">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/asds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF">

            <include
                android:id="@+id/include"
                layout="@layout/loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40" />


            <TextView

                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/your_name"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/strock_bg"
                android:hint="@string/name_here"
                android:inputType="text"
                android:lines="1"
                android:padding="4dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <TextView

                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/your_age"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView

                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gender"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/age" />


            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/strock_bg"
                android:hint="@string/age_here"
                android:inputType="number"
                android:lines="1"
                android:padding="4dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:background="@drawable/strock_bg"
                android:padding="4dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/genderSpinner"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"

                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@+id/dddd"
                        android:background="#FFF"
                        android:gravity="center|start"
                        android:textColor="#ffff"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/dddd"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/dddd"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="8dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/downarrow" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.84" />

            <!--     <TextView
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text=""
                     android:textColor="#000000"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toBottomOf="@+id/frameLayout" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQuestionnaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/continueRe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bt_background_orange"
                android:gravity="center"
                android:text="@string/continuego"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/rvQuestionnaire" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/strock_bg"
                android:digits="+0123456789"
                android:ems="10"
                android:hint="@string/phone_here"
                android:inputType="phone"
                android:lines="1"
                android:padding="4dp"
                android:textAlignment="viewStart"

                android:textColor="#000"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/product_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/ibs"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ibs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@+id/ibs"
                android:gravity="center"
                android:text="@string/powered_by_www_ibsvalley_com"
                android:textColor="#80FFFFFF"

                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>