<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9EAEC"
    tools:context=".view.fragment.StayAtHomeStatisticsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="@drawable/dotted"
                android:layerType="software"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rel_myInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/T_daysNum"
                        android:layout_width="@dimen/_55sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:background="@drawable/textview_circle"
                        android:gravity="center"
                        android:padding="@dimen/_6sdp"

                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView

                        android:id="@+id/T_myInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/T_daysNum"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="16dp"
                        android:text="@string/days"
                        android:textColor="#000"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/T_daysNum"
                        app:layout_constraintTop_toBottomOf="@+id/T_daysNum" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rel_in"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/T_in"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/colored_textview_circle"
                        android:gravity="center"
                        android:padding="@dimen/_6sdp"
                        android:textColor="#fff"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/T_in"
                        android:layout_centerHorizontal="true"
                        android:text="@string/in"
                        android:textAllCaps="true"
                        android:textColor="#000"
                        android:textSize="@dimen/_13sdp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/T_in"
                        app:layout_constraintTop_toBottomOf="@+id/T_in" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rel_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/T_out"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/colored_textview_circle"
                        android:gravity="center"
                        android:padding="@dimen/_6sdp"
                        android:textColor="#fff"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/T_out"
                        android:layout_centerHorizontal="true"
                        android:text="@string/out"
                        android:textAllCaps="true"
                        android:textColor="#000"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/T_out"
                        app:layout_constraintTop_toBottomOf="@+id/T_out" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!-- <Button
                     android:background="@drawable/btn_in"
                     android:id="@+id/bt_login"
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="45dp"
                     android:layout_marginTop="@dimen/_24sdp"
                     android:text="IN"
                     android:textColor="#fff"
                     android:textSize="@dimen/_17ssp"
                     />-->
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_60sdp"

                android:layout_marginEnd="@dimen/_60sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout1">

                <Button
                    android:id="@+id/btn_in"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/btn_in"
                    android:text="@string/in"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="@dimen/_13ssp" />

                <Button

                    android:id="@+id/btn_out"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/btn_in"
                    android:text="@string/out"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="@dimen/_13ssp"

                    />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/T_latest_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/latest_update"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout1" />

        <RelativeLayout
            android:id="@+id/rel_infected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/T_latest_update">


            <TextView
                android:id="@+id/T_infected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/infected"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/T_infected_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:textColor="#000"
                android:textSize="@dimen/_13ssp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:layout_below="@id/T_infected"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/dotted"
                android:layerType="software" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_recovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rel_infected"

            >


            <TextView
                android:id="@+id/T_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/recovered"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/T_recovered_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:layout_below="@id/T_recovered"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/dotted"
                android:layerType="software" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_died"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rel_recovered"

            >


            <TextView
                android:id="@+id/T_died"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/died"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/T_died_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/_130sdp"

                android:textColor="#000"
                android:textSize="@dimen/_13ssp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>